Update model path

--- a/vicuna_demo_base.ipynb
+++ b/vicuna_demo_base.ipynb
@@ -80,7 +80,7 @@
     "from peft import PeftModel    \n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer, LlamaTokenizer, StoppingCriteria, StoppingCriteriaList, TextIteratorStreamer\n",
     "\n",
-    "model_name = \"model_weights/13B\"\n",
+    "model_name = \"../model_weights/13B\"\n",
     "\n",
     "print(f\"Starting to load the model {model_name} into memory\")\n",
     "\n",
