--- a/vicuna_demo_trained.ipynb
+++ b/vicuna_demo_trained.ipynb
@@ -80,8 +80,8 @@
     "from peft import PeftModel    \n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer, LlamaTokenizer, StoppingCriteria, StoppingCriteriaList, TextIteratorStreamer\n",
     "\n",
-    "model_name = \"model_weights/13B\"\n",
-    "adapters_name = 'train_13B_v2'\n",
+    "model_name = \"../model_weights/13B\"\n",
+    "adapters_name = '../train_13B_v2' # name of adaptor from LoRA_finetuning.py file\n",
     "\n",
     "print(f\"Starting to load the model {model_name} into memory\")\n",
     "\n",
