Update LoRA_finetuning comment

--- a/LoRA_finetuning.ipynb
+++ b/LoRA_finetuning.ipynb
@@ -540,6 +540,8 @@
    "outputs": [],
    "source": [
     "def generate_prompt(data_point):\n",
+    "    # This function generates a prompt for a text-based question and answer\n",
+    "    # It takes in a data_point object and returns a string with the prompt and answer\n",
     "    return f\"\"\"Below is a text with a pair of question and answer relating to the text given.\n",
     "### Input:\n",
     "{data_point[\"Question\"]}\n",
@@ -548,28 +550,39 @@
     "\n",
     "\n",
     "def tokenize(prompt, add_eos_token=True):\n",
+    "    # Tokenize the prompt\n",
     "    result = tokenizer(\n",
     "        prompt,\n",
     "        truncation=True,\n",
     "        padding=False,\n",
     "        return_tensors=None,\n",
     "    )\n",
+    "\n",
+    "    # Check if the last token is not the eos token and the input is not empty\n",
     "    if (\n",
     "        result[\"input_ids\"][-1] != tokenizer.eos_token_id\n",
     "#         and len(result[\"input_ids\"]) < CUTOFF_LEN\n",
     "        and add_eos_token\n",
     "    ):\n",
+    "        # Append the eos token to the input\n",
     "        result[\"input_ids\"].append(tokenizer.eos_token_id)\n",
     "        result[\"attention_mask\"].append(1)\n",
     " \n",
     "    result[\"labels\"] = result[\"input_ids\"].copy()\n",
-    " \n",
+    "    # Return the tokenized prompt\n",
     "    return result\n",
     " \n",
     "def generate_and_tokenize_prompt(data_point):\n",
-    "    full_prompt = generate_prompt(data_point)\n",
-    "    tokenized_full_prompt = tokenize(full_prompt)\n",
-    "    return tokenized_full_prompt\n"
+    "    # This function generates a prompt and then tokenizes it using the tokenize function\n",
+    "    # It returns the tokenized prompt\n",
+    "\n",
+    "    # Generate the prompt\n",
+    "    prompt = generate_prompt(data_point)\n",
+    "\n",
+    "    # Tokenize the prompt\n",
+    "    tokenized_prompt = tokenize(prompt)\n",
+    "\n",
+    "    return tokenized_prompt\n"
    ]
   },
   {
